objects/tffa__WebFraudEventStore__c.object
<CustomObject>
    <description>Log store to capture web fraud events</description>
    <fields>
        <fullName>tffa__Action__c</fullName>
        <description>Name of the action/event being performed</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ContextId__c</fullName>
        <description>Execution context id , like submission name/id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>ContextId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__EntityName__c</fullName>
        <description>The name of the primary entity in context</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__HostName__c</fullName>
        <description>Hostname of the source from which event has occurred</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Host name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__IpAddress__c</fullName>
        <description>IP address of the device</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Ip address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Message__c</fullName>
        <description>The message of the log</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The message of the log</inlineHelpText>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>tffa__Provider__c</fullName>
        <description>Web fraud detection provider name</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Reason__c</fullName>
        <description>Reasons returned from the provider</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Score__c</fullName>
        <description>Score returned from the provider</description>
        <label>Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source of the log, typically will class.method:line</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Status__c</fullName>
        <description>Status of fraud detection</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Web Fraud Event Store</label>
    <listViews>
        <fullName>tffa__All</fullName>
        <columns>NAME</columns>
        <columns>tffa__EntityName__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <columns>tffa__Provider__c</columns>
        <columns>tffa__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Web Fraud Events</label>
    </listViews>
    <listViews>
        <fullName>tffa__ErrorEvents</fullName>
        <columns>NAME</columns>
        <columns>tffa__EntityName__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <columns>tffa__Provider__c</columns>
        <columns>tffa__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>ERROR</value>
        </filters>
        <label>Web Fraud Error Events</label>
    </listViews>
    <listViews>
        <fullName>tffa__GeoFenceEvents</fullName>
        <columns>NAME</columns>
        <columns>tffa__EntityName__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <columns>tffa__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Provider__c</field>
            <operation>equals</operation>
            <value>GEOFENCE</value>
        </filters>
        <label>Geo Fence Events</label>
    </listViews>
    <listViews>
        <fullName>tffa__ReCaptchaEvents</fullName>
        <columns>NAME</columns>
        <columns>tffa__EntityName__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <columns>tffa__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Provider__c</field>
            <operation>equals</operation>
            <value>RECAPTCHA</value>
        </filters>
        <label>reCAPTCHA Events</label>
    </listViews>
    <listViews>
        <fullName>tffa__WarningEvents</fullName>
        <columns>NAME</columns>
        <columns>tffa__EntityName__c</columns>
        <columns>tffa__Source__c</columns>
        <columns>tffa__Message__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>tffa__ContextId__c</columns>
        <columns>tffa__Provider__c</columns>
        <columns>tffa__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>tffa__Status__c</field>
            <operation>equals</operation>
            <value>WARNING</value>
        </filters>
        <label>Web Fraud Warning Events</label>
    </listViews>
    <nameField>
        <displayFormat>EVENT-{00000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Web Fraud Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>